# asteroids_sdl

./: .gitignore  Asteroid.cpp  Asteroid.h  CMakeLists.txt  DummyVector.cpp  DummyVector.h  DummyVectorMath.cpp  DummyVectorMath.h  EntitiesCollection.cpp  EntitiesCollection.h  GameEntity.cpp  GameEntity.h  Globals.h  README.md  Ship.cpp  Ship.h  ShipBullet.cpp  ShipBullet.h  ShipInputHandler.cpp  main.cpp
src/: Asteroid.cpp  Asteroid.h  AsteroidsFactory.cpp  AsteroidsFactory.h  DummyVector.cpp  DummyVector.h  EntitiesCollection.cpp  EntitiesCollection.h  GameEntity.cpp  GameEntity.h  Globals.h  Ship.cpp  ShipBullet.cpp  ShipBullet.h  ShipInputHandler.h
